--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -27,7 +27,7 @@ jobs:
           restore-keys: npm-
 
       - name: Install dependencies
-        run: npm ci --ignore-scripts
+        run: npm ci
 
       #- name: Lint
       #  run: npm run lint
@@ -37,3 +37,8 @@ jobs:
 
       - name: Build
         run: npm run build
+
+      - name: Verify
+        run: |
+          echo "require('assert').ok(typeof require('./lib/index.cjs') == 'function')" | node --input-type="commonjs"
+          echo "import { ok } from 'assert'; import relay from './lib/index.mjs'; ok(typeof relay === 'function');" | node --input-type="module"
