chore: Update package.json files

--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "esbuild",
     "esbuild-plugin"
   ],
+  "files": [
+    "lib/*"
+  ],
   "scripts": {
     "build": "./build.cjs",
     "build:watch": "./build.cjs -w",
