--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "estrella": "^1.4.1",
     "graphql": "^15.5.1",
     "jest": "^29.4.1",
+    "publint": "^0.1.9",
     "relay-config": "^12.0.1",
     "ts-jest": "^29.0.5",
     "typescript": "^4.9.5"
